--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "rm -rf .next && next build",
     "dev": "next dev",
+    "frog": "frog dev",
     "lint": "next lint --dir . --fix",
     "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,md,mdx,yml,yaml}\"",
     "start": "next start",
@@ -23,6 +24,8 @@
     "@zoralabs/protocol-deployments": "^0.1.13",
     "@zoralabs/protocol-sdk": "^0.9.0",
     "encoding": "^0.1.13",
+    "frog": "latest",
+    "hono": "latest",
     "next": "^14.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
