--- a/package.json
+++ b/package.json
@@ -15,28 +15,21 @@
   "license": "MIT",
   "dependencies": {
     "@coinbase/onchainkit": "^0.27.0",
-    "@coinbase/wallet-sdk": "^4.0.4",
     "@stackso/js-core": "^0.3.4",
     "@tanstack/react-query": "^5.51.23",
     "@vercel/analytics": "^1.2.2",
-    "@vercel/og": "^0.6.2",
     "@wagmi/core": "^2.10.5",
     "@zoralabs/protocol-deployments": "^0.1.13",
     "@zoralabs/protocol-sdk": "^0.9.0",
-    "encoding": "^0.1.13",
     "frog": "latest",
     "hono": "latest",
     "next": "^14.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.1.0",
     "react-toastify": "^10.0.5",
-    "react-use": "^17.5.1",
     "tailwindcss": "^3.4.1",
-    "usehooks-ts": "^3.1.0",
     "viem": "2.x",
-    "wagmi": "^2.12.5",
-    "ws": "^8.16.0"
+    "wagmi": "^2.12.5"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
