I add select for SaleStrategy.

--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
   "license": "MIT",
   "dependencies": {
     "@coinbase/onchainkit": "^0.27.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@stackso/js-core": "^0.3.4",
     "@tanstack/react-query": "^5.51.23",
     "@vercel/analytics": "^1.2.2",
     "@wagmi/core": "^2.10.5",
     "@zoralabs/protocol-deployments": "^0.1.13",
     "@zoralabs/protocol-sdk": "^0.9.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "frog": "latest",
     "hono": "latest",
+    "lucide-react": "^0.427.0",
     "next": "^14.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
     "wagmi": "^2.12.5"
   },
