--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@coinbase/onchainkit": "^0.27.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@stackso/js-core": "^0.3.4",
     "@tanstack/react-query": "^5.51.23",
